test_regress/t/t_covergroup_unsup.out
%Warning-COVERIGN: t/t_covergroup_unsup.v:61:34: Ignoring unsupported: coverage clocking event
   61 |    covergroup cg_clockingevent() @(posedge clk);
      |                                  ^
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Warning-COVERIGN: t/t_covergroup_unsup.v:65:25: Ignoring unsupported: coverage '@@' events
   65 |    covergroup cg_atat() @@ (begin funca or end funcb);
      |                         ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:77:20: Ignoring unsupported: cover 'iff'
   77 |       coverpoint a iff (b);
      |                    ^~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:80:24: Ignoring unsupported: cover 'iff'
   80 |       id: coverpoint a iff (b);
      |                        ^~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:83:28: Ignoring unsupported: cover 'iff'
   83 |       int id: coverpoint a iff (b);
      |                            ^~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:86:32: Ignoring unsupported: cover 'iff'
   86 |       var int id: coverpoint a iff (b);
      |                                ^~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:89:34: Ignoring unsupported: cover 'iff'
   89 |       var [3:0] id: coverpoint a iff (b);
      |                                  ^~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:92:30: Ignoring unsupported: cover 'iff'
   92 |       [3:0] id: coverpoint a iff (b);
      |                              ^~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:95:31: Ignoring unsupported: cover 'iff'
   95 |       signed id: coverpoint a iff (b);
      |                               ^~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:99:18: Ignoring unsupported: cover 'iff'
   99 |       cross a, b iff (!rst);
      |                  ^~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:99:7: Ignoring unsupported: cover cross
   99 |       cross a, b iff (!rst);
      |       ^~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:102:18: Ignoring unsupported: cover 'iff'
  102 |       cross a, b iff (!rst) {}
      |                  ^~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:102:7: Ignoring unsupported: cover cross
  102 |       cross a, b iff (!rst) {}
      |       ^~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:105:7: Ignoring unsupported: cover cross
  105 |       cross a, b { option.comment = "cross"; option.weight = 12; }
      |       ^~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:109:24: Ignoring unsupported: coverage cross 'function' declaration
  109 |          function void crossfunc; endfunction
      |                        ^~~~~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:110:21: Ignoring unsupported: coverage select function call
  110 |          bins one = crossfunc();
      |                     ^~~~~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:110:10: Ignoring unsupported: coverage cross bin
  110 |          bins one = crossfunc();
      |          ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:108:7: Ignoring unsupported: cover cross
  108 |       cross a, b {
      |       ^~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:114:28: Ignoring unsupported: cover 'iff'
  114 |       my_cg_id: cross a, b iff (!rst);
      |                            ^~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:114:17: Ignoring unsupported: cover cross
  114 |       my_cg_id: cross a, b iff (!rst);
      |                 ^~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:120:24: Ignoring unsupported: cover 'iff'
  120 |       { bins bar = {a} iff (!rst); }
      |                        ^~~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:127:23: Unsupported: cover bin 'with' specification
  127 |       { bins ba = {a} with ( b ); }
      |                       ^~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:129:27: Unsupported: cover bin 'wildcard' specification
  129 |       { wildcard bins bwa = {a}; }
      |                           ^
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:130:34: Unsupported: cover bin 'wildcard' 'with' specification
  130 |       { wildcard bins bwaw = {a} with ( b ); }
      |                                  ^~~~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:133:29: Unsupported: cover bin 'default' 'sequence'
  133 |       { bins defs = default sequence; }
      |                             ^~~~~~~~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:135:18: Unsupported: cover bin trans list
  135 |       { bins bts = ( 1, 2 ); }
      |                  ^
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:136:9: Unsupported: cover bin 'wildcard' trans list
  136 |       { wildcard bins wbts = ( 1, 2 ); }
      |         ^~~~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:137:33: Ignoring unsupported: covergroup value range
  137 |       { bins bts2 = ( 2, 3 ), ( [5:6] ), ( [5 +/- 2] ), ( [ 5 +%- 20.0] ) ; }
      |                                 ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:137:44: Ignoring unsupported: covergroup value range
  137 |       { bins bts2 = ( 2, 3 ), ( [5:6] ), ( [5 +/- 2] ), ( [ 5 +%- 20.0] ) ; }
      |                                            ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:137:59: Ignoring unsupported: covergroup value range
  137 |       { bins bts2 = ( 2, 3 ), ( [5:6] ), ( [5 +/- 2] ), ( [ 5 +%- 20.0] ) ; }
      |                                                           ^
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:137:19: Unsupported: cover bin trans list
  137 |       { bins bts2 = ( 2, 3 ), ( [5:6] ), ( [5 +/- 2] ), ( [ 5 +%- 20.0] ) ; }
      |                   ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:139:27: Ignoring unsupported: cover trans set '=>'
  139 |       { bins bts2 = ( 1,5 => 6,7 ) ; }
      |                           ^~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:139:19: Unsupported: cover bin trans list
  139 |       { bins bts2 = ( 1,5 => 6,7 ) ; }
      |                   ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:140:25: Ignoring unsupported: cover '[*'
  140 |       { bins bts2 = ( 3 [*5] ) ; }
      |                         ^~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:140:19: Unsupported: cover bin trans list
  140 |       { bins bts2 = ( 3 [*5] ) ; }
      |                   ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:141:25: Ignoring unsupported: cover '[*'
  141 |       { bins bts2 = ( 3 [*5:6] ) ; }
      |                         ^~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:141:19: Unsupported: cover bin trans list
  141 |       { bins bts2 = ( 3 [*5:6] ) ; }
      |                   ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:142:25: Ignoring unsupported: cover '[->'
  142 |       { bins bts2 = ( 3 [->5] ) ; }
      |                         ^~~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:142:19: Unsupported: cover bin trans list
  142 |       { bins bts2 = ( 3 [->5] ) ; }
      |                   ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:143:25: Ignoring unsupported: cover '[->'
  143 |       { bins bts2 = ( 3 [->5:6] ) ; }
      |                         ^~~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:143:19: Unsupported: cover bin trans list
  143 |       { bins bts2 = ( 3 [->5:6] ) ; }
      |                   ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:144:25: Ignoring unsupported: cover '[='
  144 |       { bins bts2 = ( 3 [=5] ) ; }
      |                         ^~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:144:19: Unsupported: cover bin trans list
  144 |       { bins bts2 = ( 3 [=5] ) ; }
      |                   ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:145:25: Ignoring unsupported: cover '[='
  145 |       { bins bts2 = ( 3 [=5:6] ) ; }
      |                         ^~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:145:19: Unsupported: cover bin trans list
  145 |       { bins bts2 = ( 3 [=5:6] ) ; }
      |                   ^
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:150:26: Unsupported: cover bin 'with' specification
  150 |        bins div_by_2 = a with (item % 2 == 0);
      |                          ^~~~
%Error-UNSUPPORTED: t/t_covergroup_unsup.v:151:34: Unsupported: cover bin 'with' specification
  151 |        bins div_by_2_paren[] = a with (item % 2 == 0);
      |                                  ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:157:23: Ignoring unsupported: coverage select expression 'binsof'
  157 |          bins bin_a = binsof(a);
      |                       ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:157:10: Ignoring unsupported: coverage cross bin
  157 |          bins bin_a = binsof(a);
      |          ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:158:24: Ignoring unsupported: coverage select expression 'binsof'
  158 |          bins bin_ai = binsof(a) iff (!rst);
      |                        ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:158:34: Ignoring unsupported: cover 'iff'
  158 |          bins bin_ai = binsof(a) iff (!rst);
      |                                  ^~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:158:10: Ignoring unsupported: coverage cross bin
  158 |          bins bin_ai = binsof(a) iff (!rst);
      |          ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:159:23: Ignoring unsupported: coverage select expression 'binsof'
  159 |          bins bin_c = binsof(cp.x);
      |                       ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:159:10: Ignoring unsupported: coverage cross bin
  159 |          bins bin_c = binsof(cp.x);
      |          ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:160:24: Ignoring unsupported: coverage select expression 'binsof'
  160 |          bins bin_na = ! binsof(a);
      |                        ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:160:10: Ignoring unsupported: coverage cross bin
  160 |          bins bin_na = ! binsof(a);
      |          ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:162:33: Ignoring unsupported: coverage select expression 'intersect'
  162 |          bins bin_d = binsof(a) intersect { b };
      |                                 ^~~~~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:162:10: Ignoring unsupported: coverage cross bin
  162 |          bins bin_d = binsof(a) intersect { b };
      |          ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:163:34: Ignoring unsupported: coverage select expression 'intersect'
  163 |          bins bin_nd = ! binsof(a) intersect { b };
      |                                  ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:163:10: Ignoring unsupported: coverage cross bin
  163 |          bins bin_nd = ! binsof(a) intersect { b };
      |          ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:165:23: Ignoring unsupported: coverage select expression with
  165 |          bins bin_e = with (a);
      |                       ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:165:10: Ignoring unsupported: coverage cross bin
  165 |          bins bin_e = with (a);
      |          ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:166:27: Ignoring unsupported: coverage select expression with
  166 |          bins bin_not_e = ! with (a);
      |                           ^
%Warning-COVERIGN: t/t_covergroup_unsup.v:166:10: Ignoring unsupported: coverage cross bin
  166 |          bins bin_not_e = ! with (a);
      |          ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:168:26: Ignoring unsupported: coverage select expression 'binsof'
  168 |          bins bin_par = (binsof(a));
      |                          ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:168:10: Ignoring unsupported: coverage cross bin
  168 |          bins bin_par = (binsof(a));
      |          ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:169:25: Ignoring unsupported: coverage select expression 'binsof'
  169 |          bins bin_and = binsof(a) && binsof(b);
      |                         ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:169:38: Ignoring unsupported: coverage select expression 'binsof'
  169 |          bins bin_and = binsof(a) && binsof(b);
      |                                      ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:169:35: Ignoring unsupported: coverage select expression '&&'
  169 |          bins bin_and = binsof(a) && binsof(b);
      |                                   ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:169:10: Ignoring unsupported: coverage cross bin
  169 |          bins bin_and = binsof(a) && binsof(b);
      |          ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:170:24: Ignoring unsupported: coverage select expression 'binsof'
  170 |          bins bin_or = binsof(a) || binsof(b);
      |                        ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:170:37: Ignoring unsupported: coverage select expression 'binsof'
  170 |          bins bin_or = binsof(a) || binsof(b);
      |                                     ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:170:34: Ignoring unsupported: coverage select expression '||'
  170 |          bins bin_or = binsof(a) || binsof(b);
      |                                  ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:170:10: Ignoring unsupported: coverage cross bin
  170 |          bins bin_or = binsof(a) || binsof(b);
      |          ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:171:26: Ignoring unsupported: coverage select expression 'binsof'
  171 |          bins bin_with = binsof(a) with (a);
      |                          ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:171:36: Ignoring unsupported: coverage select expression with
  171 |          bins bin_with = binsof(a) with (a);
      |                                    ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:171:10: Ignoring unsupported: coverage cross bin
  171 |          bins bin_with = binsof(a) with (a);
      |          ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:172:29: Ignoring unsupported: coverage select expression 'binsof'
  172 |          bins bin_or_with = binsof(a) || binsof(a) with (a);
      |                             ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:172:42: Ignoring unsupported: coverage select expression 'binsof'
  172 |          bins bin_or_with = binsof(a) || binsof(a) with (a);
      |                                          ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:172:52: Ignoring unsupported: coverage select expression with
  172 |          bins bin_or_with = binsof(a) || binsof(a) with (a);
      |                                                    ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:172:39: Ignoring unsupported: coverage select expression '||'
  172 |          bins bin_or_with = binsof(a) || binsof(a) with (a);
      |                                       ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:172:10: Ignoring unsupported: coverage cross bin
  172 |          bins bin_or_with = binsof(a) || binsof(a) with (a);
      |          ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:173:30: Ignoring unsupported: coverage select expression 'binsof'
  173 |          bins bin_and_with = binsof(a) && binsof(a) with (a);
      |                              ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:173:43: Ignoring unsupported: coverage select expression 'binsof'
  173 |          bins bin_and_with = binsof(a) && binsof(a) with (a);
      |                                           ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:173:53: Ignoring unsupported: coverage select expression with
  173 |          bins bin_and_with = binsof(a) && binsof(a) with (a);
      |                                                     ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:173:40: Ignoring unsupported: coverage select expression '&&'
  173 |          bins bin_and_with = binsof(a) && binsof(a) with (a);
      |                                        ^~
%Warning-COVERIGN: t/t_covergroup_unsup.v:173:10: Ignoring unsupported: coverage cross bin
  173 |          bins bin_and_with = binsof(a) && binsof(a) with (a);
      |          ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:174:37: Ignoring unsupported: coverage select expression 'binsof'
  174 |          bins bin_multiple_fields = binsof(p.inner_packet.field);
      |                                     ^~~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:174:10: Ignoring unsupported: coverage cross bin
  174 |          bins bin_multiple_fields = binsof(p.inner_packet.field);
      |          ^~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:156:7: Ignoring unsupported: cover cross
  156 |       cross a, b {
      |       ^~~~~
%Warning-COVERIGN: t/t_covergroup_unsup.v:185:23: Ignoring unsupported: coverage clocking event
  185 |       covergroup cov1 @m_z;
      |                       ^
%Error: Exiting due to
